# vf-sessionmodule

./: CMakeLists.txt  README.md  VfSessionConfig.cmake.in
src/: jsonsessionloader.cpp  licensesystem.cpp  licensesystem.h  moduleeventhandler.cpp  modulemanager.cpp  modulemanager.h
